--- a/app/shared/directives/DetailAuction/detailAuctionDirective.html
+++ b/app/shared/directives/DetailAuction/detailAuctionDirective.html
@@ -20,53 +20,55 @@
 <div ng-show="show" class="auction-detail popover bottom col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <div class="arrow"></div>
     <h2 class="main-header">{{'texts.auction.detail' | i18next}} - {{item.ID}} <i ng-click="toggleDetail()" class=" red cross glyphicon glyphicon-remove"></i></h2>
-    <div>
-        <div class="auction-detail-item col-xs-12 col-sm-12 col-md-6 col-lg-6">
-            <div class="detail-row address">
+    <div class="auction-detail-item col-xs-12 col-sm-12 col-md-6 col-lg-6 no-padding-detail">
+        <div class="col-xs-12 col-sm-6 col-md-12 col-lg-12 no-padding-detail">
+            <div class="detail-row address col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <span class="glyphicon glyphicon-home"></span>
                 <span class="detail-label">
                     {{'texts.auction.from' | i18next}}:
                 </span>
                 <span class="detail-content">{{item.address_from}}</span>
             </div>
-            <div class="detail-row address">
+            <div class="detail-row address col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <span class="glyphicon glyphicon-flag"></span>
                 <span class="detail-label">{{'texts.auction.to' | i18next}}:</span>
                 <span class="detail-content">{{item.address_to}}</span>
             </div>
-            <hr>
-            <!--<h2 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">{{'texts.about_freight' | i18next}}</h2>-->
+            <div class="col-xs-12 hidden-sm col-md-12 col-lg-12 margin-divider"></div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-12 col-lg-12 no-padding-detail">
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="detail-label col-xs-3 col-sm-4 col-md-5 col-lg-5">
+                <div class="detail-label col-xs-6 col-sm-6 col-md-7 col-lg-6">
                     <span class="normal-icon glyphicon glyphicon-pencil"></span>
                     <span>{{'texts.auction.freight_description' | i18next}}:</span>
                 </div>
-                <div class="detail-content col-xs-9 col-sm-8 col-md-7 col-lg-7"><span>{{item.freight.freight_description}}</span></div>
+                <div class="detail-content col-xs-6 col-sm-6 col-md-5 col-lg-6"><span>{{item.freight.freight_description}}</span></div>
             </div>
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="detail-label col-xs-3 col-sm-4 col-md-5 col-lg-5">
+                <div class="detail-label col-xs-6 col-sm-6 col-md-7 col-lg-6">
                     <span class="normal-icon glyphicon glyphicon-tag"></span>
                     <span>{{'texts.auction.freight_type.label' | i18next}}:</span>
                 </div>
-                <div class="detail-content col-xs-9 col-sm-8 col-md-7 col-lg-7"><span>{{vm.getFreightType(item.freight.freight_type)}}</span></div>
+                <div class="detail-content col-xs-6 col-sm-6 col-md-5 col-lg-6"><span>{{vm.getFreightType(item.freight.freight_type)}}</span></div>
             </div>
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="detail-label col-xs-3 col-sm-4 col-md-5 col-lg-5">
+                <div class="detail-label col-xs-6 col-sm-6 col-md-7 col-lg-6">
                     <i class="normal-icon awes-icon fas fa-weight-hanging"></i>
                     <span>{{'texts.auction.freight_weight' | i18next}}:</span>
                 </div>
-                <div class="detail-content col-xs-9 col-sm-8 col-md-7 col-lg-7"><span>{{item.freight.freight_weight}} kg</span></div>
+                <div class="detail-content col-xs-6 col-sm-6 col-md-5 col-lg-6"><span>{{item.freight.freight_weight}} kg</span></div>
             </div>
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="detail-label col-xs-3 col-sm-4 col-md-5 col-lg-5">
+                <div class="detail-label col-xs-6 col-sm-6 col-md-7 col-lg-6">
                     <span class="normal-icon glyphicon glyphicon-resize-full"></span>
                     <span>{{'texts.auction.freight_size' | i18next}}:</span>
                 </div>
-                <div class="detail-content col-xs-9 col-sm-8 col-md-7 col-lg-7"><span>{{item.freight.freight_size}}</span></div>
+                <div class="detail-content col-xs-6 col-sm-6 col-md-5 col-lg-6"><span>{{item.freight.freight_size}}</span></div>
             </div>
         </div>
     </div>
-    <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-6">
+    <hr class="col-xs-12 col-sm-12 hidden-md hidden-lg">
+    <div class="auction-detail-item col-xs-12 col-sm-12 col-md-6 col-lg-6 no-padding-detail">
 
         <div ng-if="expired" class="row detail-row text-center">
             <div class="detail-label col-xs-12 col-sm-12 col-md-5 col-lg-5">
@@ -85,7 +87,7 @@
             </div>
         </div>
         <div ng-if="!expired" class="row detail-row text-center">
-            <div class="detail-label col-xs-12 col-sm-12 col-md-5 col-lg-5">
+            <div class="detail-label col-xs-12 col-sm-6 col-md-4 col-lg-5">
                 <div class="price-label">
                     {{'texts.actual_price' | i18next}}
                 </div>
@@ -93,26 +95,25 @@
                     {{item.current_price}},-
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
+            <div class="col-xs-12 col-sm-6 col-md-8 col-lg-7">
                 <div ng-if="!win && withBids" class="auction-bid detail-row">
-                    <div class="has-feedback has-feedback-right col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                        <input type="text" ng-model="bid" class="form-control text-right my-input bid" placeholder="{{'texts.amount' | i18next}}"/>
-                        <span class="form-control-feedback">Kč</span>
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                    <div class="bid-inputs">
+                        <div class="bid-wrapper has-feedback has-feedback-right">
+                            <input type="text" ng-model="bid" ng-keypress="onkeyDown($event, bid)" class="form-control text-right my-input bid" placeholder="{{'texts.amount' | i18next}}"/>
+                            <span class="form-control-feedback">Kč</span>
+                        </div>
                         <div class="my-button normal-button bid-button" ng-click="vm.bidAuction(bid)">
-                            <span class="glyphicon glyphicon-ok"></span>
-                            <span>{{'texts.bid' | i18next}}</span>
+                            <span class="glyphicon glyphicon-circle-arrow-down"></span>
                         </div>
                     </div>
                 </div>
-                <div ng-if="win" class="info-block">
+                <div ng-if="win" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 info-block info-block-win">
                     <span class="glyphicon glyphicon-thumbs-up"></span>
                     {{'texts.auction_win' | i18next}}
                 </div>
             </div>
         </div>
-        <hr class="small">
+        <hr ng-if="!expired || win || userIsBidder" class="small">
         <div ng-if="!expired" class="detail-row text-center">
             <span class="glyphicon glyphicon-hourglass"></span>
             <span class="detail-content">
