--- a/app/shared/directives/DetailUser/detailUserDirective.html
+++ b/app/shared/directives/DetailUser/detailUserDirective.html
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div class="detail-row">
-            <div class="detail-content text-right">
+            <div class="detail-content delete-content text-right">
                 <div class="delete-user" ng-click="deleteUser(driver.ID)">
                     <span class="glyphicon glyphicon-trash delete"></span> {{'texts.delete_driver' | i18next}}
                 </div>
