--- a/app/shared/directives/DetailUser/detailUserDirective.html
+++ b/app/shared/directives/DetailUser/detailUserDirective.html
@@ -41,10 +41,10 @@
                 </div>
                 <div class="vacation-actions">
                     <div ng-if="!isVac" class="my-button normal-button" ng-click="addVacation(driver.ID)">
-                        <span class="glyphicon glyphicon-plus"></span> {{'texts.add_vacation' | i18next}}
+                        <span class="glyphicon glyphicon-plus"></span> {{add_remove_vac_button_disabled ? ('texts.no_date_selected' | i18next) : ('texts.add_vacation' | i18next)}}
                     </div>
                     <div ng-if="isVac" class="my-button normal-button" ng-click="removeVacation(driver.ID)">
-                        <span class="glyphicon glyphicon-minus"></span> {{'texts.delete_vacation' | i18next}}
+                        <span class="glyphicon glyphicon-minus"></span> {{add_remove_vac_button_disabled ? ('texts.no_date_selected' | i18next) : ('texts.delete_vacation' | i18next)}}
                     </div>
                 </div>
             </div>
